Fixup last merge so that 3.3.x handles the new libc code.
bk: 43c66816rZjNRp8csr7Oz5wZOgxvRg

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -12,10 +12,11 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	mkdir.o \
 	mmap.o \
 	putenv.o \
-	randomBits.o rlimit.o rmtree.o \
+	rlimit.o rmtree.o \
 	samepath.o sig.o smartrename.o spawn.o system.o \
 	tty.o \
-	utils.o)
+	utils.o \
+	which.o)
 
 UTILS_HDRS = lines.h mmap.h style.h system.h unix.h win32.h
 
