Add generic hash interface for saving and recording a hash to a string.
The data is encoded according to RFC1738 so this code parses
URL query strings as a side effect and will be useful to fix
bkweb.

bk: 4429937dFfEzVDzPv8Rh1e8BQjr9pw

--- a/hash/Makefile
+++ b/hash/Makefile
@@ -1,7 +1,7 @@
 hash.fake:
 	$(MAKE) -C.. hash
 
-HASH_OBJS = $(patsubst %,hash/%, hash.o memhash.o wrapmdbm.o)
+HASH_OBJS = $(patsubst %,hash/%, hash.o hash_tostr.o memhash.o wrapmdbm.o)
 HASH_HDRS = hash.h hash/wrapmdbm.h hash/memhash.h
 
 hash: $(HASH_OBJS)
