Change 'bk upgrade' to require a real license key be available before it starts a download.  And then use inskeys to insert that include into the install image that was just downloaded.
This csets makes the inskeys command internal to bk so
that it can be called directly from upgrade,  it
is still build as a seperate standalone command in
addition.

This cset changes inskeys to use more of the functions
provided by our local libc and added a memmem() function
to our local string library since that was useful.

bk: 4474e1c1jJabme9F2gHaiQToKFU2eA

--- a/string/Makefile
+++ b/string/Makefile
@@ -5,7 +5,7 @@ STRING_OBJS = $(patsubst %,string/%, \
 	bcmp.o bcopy.o bzero.o \
 	ffs.o \
 	index.o \
-	memccpy.o memchr.o memcmp.o memcpy.o memmove.o memset.o \
+	memccpy.o memchr.o memcmp.o memcpy.o memmem.o memmove.o memset.o \
 	rindex.o \
 	strcasecmp.o strcat.o strchr.o strcmp.o strcpy.o strcspn.o strdup.o \
 	strlen.o strncat.o strncmp.o strncpy.o strndup.o strpbrk.o strrchr.o \
