Fix a series of bugs in bkweb.
BUGID:
 2001-05-30-003   URL-encoding for searching doesn't work
 2002-07-02-001   bkweb search fails for multiple words
 2004-01-30-002   bk web does not support multiword search
 2004-04-06-001   bk/web shows multiple tags without seperator
 2004-06-03-001   bk/web search in file contents is broken
 2006-02-07-002   Spaces in a filename break changeset/annotation

In addition several other problems related to illegal characters in
files or search terms causing problems have also been fixed.

And we no longer use multiple <base href=> clauses in the html body
which caused some browsers or parser to fail.

This also adds a toplevel repository viewer.

Add a "link to this page" link at the top of every page
that translates any revisions in the URL to MD5KEYs.

bk: 44a2eab4euatCrF_BwMEezAgfZuOeA

--- a/string/Makefile
+++ b/string/Makefile
@@ -9,7 +9,7 @@ STRING_OBJS = $(patsubst %,string/%, \
 	rindex.o \
 	strcasecmp.o strcat.o strchr.o strcmp.o strcpy.o strcspn.o strdup.o \
 	strlen.o strncat.o strncmp.o strncpy.o strndup.o strpbrk.o strrchr.o \
-	strsep.o strspn.o strstr.o strtok.o)
+	strsep.o strspn.o strstr.o strcasestr.o strtok.o)
 
 STRING_HDRS = string.h
 
