--- a/utils/Makefile
+++ b/utils/Makefile
@@ -16,6 +16,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	samepath.o sig.o smartrename.o spawn.o stdioext.o system.o \
 	tty.o \
 	utils.o \
+	webencode.o \
 	which.o)
 
 UTILS_HDRS = lines.h mmap.h style.h system.h unix.h win32.h
