--- a/utils/Makefile
+++ b/utils/Makefile
@@ -6,6 +6,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	cleanpath.o \
 	concat_path.o \
 	dirname.o dirs.o \
+	efopen.o \
 	filecopy.o fileutils.o findpid.o fullname.o fileinfo.o \
 	getnull.o getopt.o \
 	lines.o \
