--- a/win32/Makefile
+++ b/win32/Makefile
@@ -2,7 +2,7 @@ win32.fake:
 	$(MAKE) -C.. win32
 
 WIN32_OBJS = $(patsubst %,win32/%, \
-	nt_stat.o w32sock.o wapi_intf.o wcrt_intf.o)
+	nt_stat.o reg.o w32sock.o wapi_intf.o wcrt_intf.o)
 WIN32_HDRS = $(patsubst %,win32/%, \
 	NewAPIs.h dirent.h ftw.h misc.h mman.h \
 	re_map.h re_map_decl.h stat.h sys/wait.h times.h utsname.h \
