Add 'bk uninstall' interface that knows how to uninstall BK. This replaces all the crud in src/win32/util and a bunch of Shell and Tcl code.
Add ability to shut up win32's unlink(), rmdir(), etc. by providing
an API that controlls this behaviour.

bk: 45083f50z4Uu-JNyf01_axnwWjCmUw

--- a/win32/Makefile
+++ b/win32/Makefile
@@ -4,10 +4,8 @@ win32.fake:
 WIN32_OBJS = $(patsubst %,win32/%, \
 	nt_stat.o reg.o w32sock.o wapi_intf.o wcrt_intf.o)
 WIN32_HDRS = $(patsubst %,win32/%, \
-	NewAPIs.h dirent.h ftw.h misc.h mman.h \
+	dirent.h ftw.h misc.h mman.h \
 	re_map.h re_map_decl.h stat.h sys/wait.h times.h utsname.h \
-	win32.h w32sock.h)
-
-win32.h: $(WIN32_HDRS)
+	w32sock.h)
 
 win32: $(WIN32_OBJS)
