--- a/utils/Makefile
+++ b/utils/Makefile
@@ -14,7 +14,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	mmap.o \
 	putenv.o \
 	rlimit.o rmtree.o \
-	samepath.o sig.o smartrename.o spawn.o stdioext.o system.o \
+	samepath.o sig.o smartrename.o spawn.o stdioext.o sys.o system.o \
 	tty.o \
 	utils.o \
 	webencode.o \
