Split spawn_filterPipeline() and spawnvpio() in to separate source files in libc.  This is needed some simple programs that link libc will be smaller and won't require the networking layer.
This makes the install image smaller

bk: 457d3d9fsPj_lt_TLm193BL6ty99dQ

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -14,7 +14,9 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	mmap.o \
 	putenv.o \
 	rlimit.o rmtree.o \
-	samepath.o sig.o smartrename.o spawn.o stdioext.o sys.o system.o \
+	samepath.o sig.o smartrename.o \
+	spawn.o spawnvpio.o spawn_filterpipeline.o \
+	stdioext.o sys.o system.o \
 	tty.o \
 	utils.o \
 	webencode.o \
