bkweb dropping data; now explicitly shutdown the stdout socket on win32. bk upgrade -a lists version of bk available. Remove meaningless access() system calls on unix. Lock -f work with -L and -U now. 'bk tags <repo>' now works. Make timestamp option delta -T symmetrical to get -T; was delta -G. Move ttyprintf() to its own C file to prevent the linker from pulling in network libraries when aprintf() is used. Set BK_NODIREXPAND to be able to have 'bk ci -ycomment' do nothing instead of checking in the whole directory. BugID 2002-03-06-004 - EDITOR='emacs -nw' works with content conflict.
bk: 45aea6344VGy9AMaAEKwRD5jGmlgxg

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -15,7 +15,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	putenv.o \
 	rlimit.o rmtree.o \
 	samepath.o sig.o smartrename.o spawn.o stdioext.o sys.o system.o \
-	tty.o \
+	tty.o ttyprintf.o \
 	utils.o \
 	webencode.o \
 	which.o)
