Rewrite zgets.c to have a cleaner interface and better peformance.  (getRegBody now takes 15% less instructions and 15% less memory references on compressed files)
Also some new interfaces for reading compressed files
that will be needed by other csets.

Move zgets.c to libc/utils and move the zlib library to
libc/zlib and include objects in libc.a

bk: 460bd919HraDKuR4VWbZCz-esw_YiA

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -18,7 +18,8 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	tty.o ttyprintf.o \
 	utils.o \
 	webencode.o \
-	which.o)
+	which.o \
+	zgets.o)
 
 UTILS_HDRS = lines.h mmap.h style.h system.h unix.h win32.h
 
