DEBUGGING: Add TRACE() macro and make the compile output be more terse.
TRACE() is a macro intended for debugging, it's tunable and controlled by
the following environment variables

BK_TRACE: (turn tracing on/off, it has efopen() semantics)
BK_DTRACE: same as BK_TRACE, but make the output diffable
BK_TTRACE: same as BK_TRACE, but turn on timestamps
BK_TRACE_FILES: only trace these files. Colon separated and takes globs
BK_TRACE_FUNCS: only trace these funcs. Colon separated and takes globs.
BK_TRACE_PROGS: only trace these bitkeeper commands (e.g. 'version', or
'changes'). Colon separated and takes globs.

Note that if you don't want to print anything in TRACE, you have to use
TRACE(0, 0) because of a bug in old compilers.

The output looks like:

dirac src $ BK_TTRACE=1 ./bk -r check -ac
bk sfiles (60079  1.211) [locking.c:repository_mine:99]
bk sfiles (60079  1.223) [locking.c:repository_mine:99]
bk sane (60080  1.559) [locking.c:repository_mine:99]
bk sane (60080  1.559) [locking.c:repository_mine:99]
bk check (60078  1.561) [locking.c:repository_mine:99]
bk check (60078  1.561) [locking.c:repository_mine:99]

I also made the compilation less verbose but retained the ability to make
it verbose again using:

./build -v p
make V=1 p

or if you really want it to be verbose all the time (and you use build) just
set BK_VERBOSE_COMPILE=1 in your environment.

bk: 4824b5a2rhdqDM5UK_8VqEYJSfRKHw

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -7,16 +7,17 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	dirname.o dirs.o \
 	efopen.o \
 	filecopy.o fileutils.o findpid.o fullname.o fileinfo.o \
-	getnull.o getopt.o \
+	getnull.o getopt.o glob.o \
 	lines.o \
 	mkdir.o \
+	milli.o \
 	mmap.o \
 	putenv.o \
 	rlimit.o rmtree.o \
 	samepath.o sig.o smartrename.o \
 	spawn.o spawnvpio.o spawn_filterpipeline.o \
 	stdioext.o sys.o system.o \
-	tty.o ttyprintf.o \
+	trace.o tty.o ttyprintf.o \
 	utils.o \
 	webencode.o \
 	which.o \
