Create fmem_open() to create a FILE* that reads and writes in an in-memory array of memory.
Use this fake FILE* to extend takepatch to do all the patch
applying in memory and rewriting files on disk over and
over again.

bk: 487229cdpFk2tTp8jK5i6VH6BM_Jcg

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -6,7 +6,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	concat_path.o \
 	dirname.o dirs.o \
 	efopen.o \
-	filecopy.o fileutils.o findpid.o fullname.o fileinfo.o \
+	filecopy.o fileutils.o findpid.o fmem.o fullname.o fileinfo.o \
 	getnull.o getopt.o glob.o \
 	lines.o \
 	mkdir.o \
