blobfs: Fix 'bk mv dir1 dir2' so it moves the SCCS files as well. This is done by making rename(dir1, dir2) work.
While addressing some symlink issues I removed path_canon()
function and went back to fullname() with a new API where it
doesn't rely on a static buffer.

bk: 4a09c7acxO8977dmCAtX5QX-RdUoBw

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -12,7 +12,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	mkdir.o \
 	milli.o \
 	mmap.o \
-	path_canon.o putenv.o \
+	putenv.o \
 	rlimit.o rmtree.o \
 	samepath.o sig.o smartrename.o \
 	spawn.o spawnvpio.o spawn_filterpipeline.o \
