Fix 'bk -A cmd' and 'bk -U cmd' to run cmd from the current directory and have the filenames be relative to the current directory.  Oscar added the relative path code and the fixes to sfiles for this.
Wayne worked on bk.c option parsing and attempting to make
-r -s & -A have predictable actions and blocking options that
don't make sense together.  Some issues still remain here but
this code is still considerably improved.

Rick provided lots of testing and feedback that changed the
outcome.

bk: 4ca48c28UTjcQHjxUNoYPx3_5dbpdQ

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -14,7 +14,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	milli.o \
 	mmap.o \
 	putenv.o \
-	realbasename.o rlimit.o rmtree.o \
+	realbasename.o relpath.o rlimit.o rmtree.o \
 	samepath.o sig.o smartrename.o \
 	spawn.o spawnvpio.o spawn_filterpipeline.o \
 	str_subst.o \
