Switch to using crc32c for fchksum.c code. It has many advantages order adler32.
bk: 4eeb893cIlXKmgg98SL9jTjNF3ayIw

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -4,6 +4,7 @@ utils.fake:
 UTILS_OBJS = $(patsubst %,utils/%, \
 	cleanpath.o \
 	concat_path.o \
+	crc32c.o \
 	data.o \
 	dirname.o dirs.o \
 	efopen.o \
