Replace the old zgets/zputs lirary with a stdio wrapper that can handle all the current uses.  This saves a lot of code because stdio does all the buffer management.
The new version does more error checking for unexpected conditions
and can't handles streams generated by bk-4.0.2 and earlier because
those version never called Z_STREAM_END and so never had a proper
gzip EOF marker.

bk: 4f4e5c67HDd8HNzOdg5ahTcUlE58pA

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -10,6 +10,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	efopen.o \
 	fchksum.o \
 	fgzip.o \
+	fopen_zip.o \
 	fileops.o \
 	fileutils.o findpid.o fmem.o fullname.o fileinfo.o \
 	getnull.o getopt.o glob.o \
@@ -18,6 +19,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	milli.o \
 	mmap.o \
 	putenv.o \
+	readn.o \
 	realbasename.o relpath.o rlimit.o rmrepo.o rmtree.o \
 	samepath.o sig.o smartrename.o \
 	spawn.o spawnvpio.o spawn_filterpipeline.o \
@@ -26,8 +28,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	testcode.o trace.o tty.o ttyprintf.o \
 	utils.o \
 	webencode.o \
-	which.o \
-	zgets.o)
+	which.o)
 
 UTILS_HDRS = lines.h mmap.h style.h system.h unix.h win32.h
 
