Another API changing cset that is designed to setup for making the cset we have a format transform when reading and writing.
Here we make the file checksums for ascii sfiles automatic
by using a stdio layer to do the calculation.
This should be faster.

Also several existing APIs are renamed for more consistancy.

bk: 4fccdc80lFMUK2Bkf4kiSXkUQh09TQ

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -8,8 +8,9 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	data.o \
 	dirname.o dirs.o \
 	efopen.o \
-	fchksum.o \
-	fgzip.o \
+	fopen_cksum.o \
+	fopen_crc.o \
+	fopen_vzip.o \
 	fopen_zip.o \
 	fileops.o \
 	fileutils.o findpid.o fmem.o fullname.o fileinfo.o \
