Add die() and warn() functions a la perl.
bk: 5138b910kcg50SFPAMcR1S1uwdkWaw

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -5,6 +5,7 @@ UTILS_OBJS = $(patsubst %,utils/%, \
 	cleanpath.o \
 	concat_path.o \
 	crc32c.o \
+	die.o \
 	data.o \
 	dirname.o dirs.o \
 	efopen.o \
