Add new specialized hash to the hash API library. The U32 hash only works in the keys in a non-zero u32 key and the value is a fixed size.  It also doesn't support deleting items from the hash.
But for those tradeoffs it gets significantly improved
speed.

bk: 54635877pLtknPFtpTWGaTQd07NLPg

--- a/hash/Makefile
+++ b/hash/Makefile
@@ -1,7 +1,10 @@
 hash.fake:
 	$(MAKE) -C.. hash
 
-HASH_OBJS = $(patsubst %,hash/%, hash.o hash_tostr.o hash_tofile.o memhash.o wrapmdbm.o)
-HASH_HDRS = hash.h hash/wrapmdbm.h hash/memhash.h
+HASH_OBJS = $(patsubst %,hash/%, \
+	 hash.o hash_tostr.o hash_tofile.o \
+	 memhash.o wrapmdbm.o u32hash.o)
+
+HASH_HDRS = hash.h hash/wrapmdbm.h hash/memhash.h hash/u32hash.h
 
 hash: $(HASH_OBJS)
