--- a/utils/BUILD
+++ b/utils/BUILD
@@ -1,8 +1,16 @@
 # -*-Python-*-
 
 cc_library(name = "utils",
-           srcs = ["base64.c", "webencode.c"],
-           hdrs = ["base64.h", "webencode.h"],
+           srcs = [
+               "base64.c",
+               "crc32c.c",
+               "webencode.c",
+           ],
+           hdrs = [
+               "base64.h",
+               "crc32c.h",
+               "webencode.h"
+           ],
            deps = ["//:bkstyle", "//lines:lines"],
            visibility = ["//visibility:public"]
            )
